AW | 345 | masthead user nav is now positioned correctly on IE9 and IE10

--- a/assets/scss/modules/_masthead.scss
+++ b/assets/scss/modules/_masthead.scss
@@ -54,6 +54,7 @@
   padding-top: 0.4em;
   flex: 1;
   white-space: nowrap;
+  float: right;
   i {
     font-size: 1.5em;
   }
